--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -5,9 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="./js/main.js"></script>
-  </body>
+ 
+<body class="cool">
+  <h1 class="hero">CSS Custom Properties</h1>
+  <div class="main">
+    <button class="btn">Click Me</button>
+  </div>
+  <script type="module" src="./js/main.js"></script>
+</body>
 </html>
