--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -6,10 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
  
-<body class="cool">
+<body class="darkmode">
   <h1 class="hero">CSS Custom Properties</h1>
   <div class="main">
     <button class="btn">Click Me</button>
+    <button class="btn2">Click Me2</button>
+
+    <div class="outer ">
+      <div class="inner hvr-shrink">
+        <img
+          src=""
+          alt=""
+        />
+      </div>
+
+      <div class="inner hvr-shrink">
+        <img
+          src=""
+          alt=""
+        />  
+      </div>
+   </div>
   </div>
   <script type="module" src="./js/main.js"></script>
 </body>
