--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -9,23 +9,10 @@
 <body class="darkmode">
   <h1 class="hero">CSS Custom Properties</h1>
   <div class="main">
-    <button class="btn">Click Me</button>
-    <button class="btn2">Click Me2</button>
-
-    <div class="outer ">
-      <div class="inner hvr-shrink">
-        <img
-          src=""
-          alt=""
-        />
-      </div>
-
-      <div class="inner hvr-shrink">
-        <img
-          src=""
-          alt=""
-        />  
-      </div>
+    <button id="btn">Click Me</button>
+    <button id="btn2">Click Me2</button>
+    <div id="container-box">
+   
    </div>
   </div>
   <script type="module" src="./js/main.js"></script>
