--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
  
-<body class="darkmode">
+<body class="lightmode">
   <h1 class="hero">CSS Custom Properties</h1>
-  <div class="main">
+  <div class="main" >
     <button id="btn">Click Me</button>
     <button id="btn2">Click Me2</button>
-    <div id="container-box">
-   
+    <div id="container-box" >
+
+    </div>
    </div>
-  </div>
-  <script type="module" src="./js/main.js"></script>
 </body>
+<script type="module" src="./js/main.js"></script>
 </html>
