--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -5,16 +5,15 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
- 
-<body class="lightmode">
-  <h1 class="hero">CSS Custom Properties</h1>
-  <div class="main" >
-    <button id="btn">Click Me</button>
-    <button id="btn2">Click Me2</button>
-    <div id="container-box" >
 
-    </div>
-   </div>
-</body>
-<script type="module" src="./js/main.js"></script>
+    <body class="lightmode">
+      <h1 class="hero">CSS Custom Properties</h1>
+      <div class="main">
+        <button class="btn" id="btn1">Change Theme</button>
+        <button class="btn" id="btn2">Click Me2</button>
+        <div id="container-box"></div>
+      </div>
+    </body>
+    <script type="module" src="./js/main.js"></script>
+  </head>
 </html>
