--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -10,7 +10,9 @@
       <h1 class="hero">CSS Custom Properties</h1>
       <div class="main">
         <button class="btn" id="btn1">Change Theme</button>
-        <button class="btn" id="btn2">Click Me2</button>
+        <button class="btn" id="btn2">Marksman</button>
+        <button class="btn" id="btn3">Mage</button>
+        <button class="btn" id="btn4">Tank</button>
         <div id="container-box"></div>
       </div>
     </body>
