--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -7,12 +7,16 @@
     <title>Vite App</title>
 
     <body class="lightmode">
-      <h1 class="hero">CSS Custom Properties</h1>
+      <h1 class="hero">League of Legends Champ Class</h1>
       <div class="main">
         <button class="btn" id="btn1">Change Theme</button>
         <button class="btn" id="btn2">Marksman</button>
         <button class="btn" id="btn3">Mage</button>
         <button class="btn" id="btn4">Tank</button>
+        <button class="btn" id="btn5">Assassin</button>
+        <button class="btn" id="btn6">Fighter</button>
+        <button class="btn" id="btn7">Support</button>
+        <button class="btn" id="btn8">All</button>
         <div id="container-box"></div>
       </div>
     </body>
