--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
 
-    <body class="lightmode">
+    <body class="lightmodes">
       <h1 class="hero">League of Legends Champ Class</h1>
       <div class="main">
         <button class="btn" id="btn1">Change Theme</button>
@@ -19,7 +19,7 @@
         <button class="btn" id="btn8">All</button>
         <div id="container-box"></div>
       </div>
-    </body> 
+    </body>
     <script type="module" src="./js/main.js"></script>
   </head>
 </html>
